# src/routes/confirm.js
@@ -3,7 +3,7 @@ import { getDb } from '../db/connect.js';
 export default async (req, res) => {
     const { confirmationId } = req.params;
 
-    const confirmation = await getDb().collection('confirmations').findOne({ id: confirmationId });
+    const confirmation = await getDb().collection('bookings').findOne({ id: confirmationId });
 
     res.render('trips/confirm', {
         title: 'Trip Confirmation',
