# src/routes/router.js
@@ -1,7 +1,9 @@
 import railTripsRouter from './trips.js';
 import { trainsApi, trainsPage } from './trains.js';
+import apiRoutes from './api-routes.js';
 import { Router } from 'express';
 import { homePage, aboutPage, testErrorPage } from './index.js';
+import { bookingsAdminPage } from '../controllers/bookings.js';
 
 const router = Router();
 
@@ -16,6 +18,12 @@ router.get('/trains', trainsPage);
 
 // Trains API
 router.get('/api/trains', trainsApi);
+
+// Bookings API
+router.use('/api', apiRoutes);
+
+// Bookings admin page
+router.get('/bookings-admin', bookingsAdminPage);
 
 // Rail trips
 router.use('/trips', railTripsRouter);
